# Pranara-Tours

./: README.md  index.html
backend/: .env  .env.example  app.py  config.py  instagram_scraper.py  pyproject.toml  requirements.txt  setup_supabase_api.py  supabase_schema.sql  supabase_schema_upgrade.sql  supabase_setup.py  test_supabase_connection.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: About.jsx  Booking.jsx  CreativeGallery.jsx  EscapeSection.jsx  Experiences.jsx  ExploreMunnar.jsx  FAQ.jsx  Features.jsx  Footer.jsx  Gallery.jsx  Hero.jsx  InstagramGallery.jsx  KeralaMap.jsx  LocalHeritage.jsx  Navbar.jsx  Preloader.jsx  Testimonials.jsx  TourDetail.jsx  Tours.jsx  TravelTips.jsx  TripPlanner.jsx  keralamtrad.css  keralamtrad.jsx
