[project]
name = "pranara-tours-backend"
version = "1.0.0"
description = "Pranara Tours Backend API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1",
    "flask-cors>=5.0",
    "supabase>=2.12",
    "python-dotenv>=1.1",
    "requests>=2.32",
    "gunicorn>=23.0",
    "beautifulsoup4>=4.13",
    "lxml>=5.4",
]
